# master_distributor

./: pyproject.toml  ruff.toml
master_distributor/: _core.py  _types.py  distributors.py  parser.py  slicer.py  utils.py
master_distributor/distributors/: __init__.py  _core.py  _slice_distributors.py  _types.py  _utils.py  distributors.py
tests/: test_distribution.py
