[tool.poetry]
name = "master-distributor"
version = "0.1.0"
description = ""
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"
packages = [{include = "master_distributor"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
